test fix overflow

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ background-color: #fdfcfc;
 line-height: 1.5;
 margin: 0;
 border: 0;
-
+overflow-x: hidden;
 }
 header{
     background-color: black;
